--- a/components/Versao0.1/index.html
+++ b/components/Versao0.1/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page 0.1</title>
+    <link rel="stylesheet" href="../styles/stiloVersao0.1.css">
+    <link rel="stylesheet" href="../styles/mediaV0.1.css">
+    <link rel="stylesheet" href="../styles/mediaV0.1.css">
+    <link rel="stylesheet" href="../styles/menuMoblie.css">
+   
 </head>
 <body>
     <header>
@@ -14,22 +19,44 @@
             </div>
             <div class="nav-bar-link">
                 <ul>
-                    <li class="list-link-cont"><a href="#" class="a-link">HOME</a></li>
-                    <li class="list-link-cont"><a href="#" class="a-link">ABOUT US</a></li>
-                    <li class="list-link-cont"><a href="#" class="a-link">GALERY</a></li>
-                    <li class="list-link-cont"><a href="#" class="a-link">CONTACT</a></li>
+                    <li class="list-link-cont"><a href="#" class="a-link l" >HOME</a></li>
+                    <li class="list-link-cont"><a href="#" class="a-link l">ABOUT US</a></li>
+                    <li class="list-link-cont"><a href="#" class="a-link l">GALERY</a></li>
+                    <li class="list-link-cont"><a href="#" class="a-link" id="home">CONTACT</a></li>
                 </ul>
             </div>
+
+            <div class="mobile-menu-icon">
+                <button onclick="openMenu()"><img  class="icon" src="../images/menu_white_36dp.svg" alt=""></button>
+            </div>
         </nav>
-        
+        <div class="div-menu-mobile">
+            <ul>
+                <li class="li-mobile"><a href="#" class="a-molile" >HOME</a></li>
+                <li class="li-mobile"><a href="#" class="a-molile">ABOUT US</a></li>
+                <li class="li-mobile"><a href="#" class="a-molile">GALERY</a></li>
+                <li class="li-mobile"><a href="#" class="a-molile">CONTACT</a></li>
+            </ul>
+
+        </div>
     </header>
     <main>
-        <article>
-
+        <aside>
+            <h2><span>Inscreva-se agora</span></h2>
+            <h2>na Newsletter</h2>
+            <p >
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, consequatur totam consequuntur facere optio modi aut officiis unde animi accusamus sequi nobis, vel necessitatibus earum incidunt? Recusandae nulla culpa consectetur.
+            </p>
+            <form action="#">
+                <input type="text" name="nome" id="nome" placeholder="Nome" class="inputs">
+                <input type="email" name="email" id="email" placeholder="E-mail" class="inputs">
+                <input type="submit" value="Enviar">
+            </form>
+        </aside>
+        <article class="imagem">
+            <img src="../images/77d0a7c454e658833800528e748edbe9.png" alt="Madame Rosa" id="foto-perfil">
         </article>
-        <figure>
-            <img src="" alt="">
-        </figure>
+
     </main>
     <script src="indexV0.1.js"></script>
     
