--- a/components/styles/media.css
+++ b/components/styles/media.css
@@ -22,6 +22,7 @@
     font-size: 30px;
     text-align: center;
     line-height: 18px;
+    margin-bottom: 20px;
    }
    .imagem{
     margin: auto;
@@ -33,6 +34,7 @@
    }
    p{
     margin: auto;
+    font-family: 'Courier New', Courier, monospace;
    }
    form{
     margin: 0 auto;
@@ -46,25 +48,21 @@
     align-self: center;
     margin: 30px;
    }
+   .inputs{
+      margin-top: 20px;
+      height: 20px;
+      border-radius: 10px;
+      border: none;
+      outline: none;
+      padding: 10px;
+      font-size: 15px;
+  
+  }
    /*MENU MIBILE*/
    .mobile-menu-icon{
       display: block;
       
    }
-   .mobile-menu-icon button{
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-     
-   }
-   .mobile-menu ul{
-       display: flex;
-       flex-direction: column;
-       padding-bottom: 8px;
-       text-align: center;
-   }
-   .open{
-      display: block;
-   }
+  
 
 }
