--- a/components/styles/stiloVersao0.1.css
+++ b/components/styles/stiloVersao0.1.css
@@ -4,3 +4,73 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: rgb(34,34,34);
+    color: #fff;
+    font-family: poppinsregular;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+}
+.nav-list-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-list-bar .logo{
+    border: 1px solid #fff;
+    padding: 8px;
+    cursor: pointer;
+    border-radius: 6px;
+    box-shadow: 2px 2px 10px #ffffff2a
+}
+.logo  h1{
+    font-variant: small-caps !important;
+}
+.nav-bar-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+}
+.nav-bar-link ul{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    align-items: center;
+}
+.nav-list-bar .list-link-cont{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 15px;
+}
+.list-link-cont .a-link{
+    text-decoration: none;
+    color: #fff;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 500;
+    font-size: 18px;
+}
+#home{
+    border: 2px solid rgb(132,14,201);
+    padding: 6px;
+    border-radius: 6px;
+    transition: 2s;
+}
+#home:hover{
+    background-color: #28072f;
+    cursor: pointer;
+    transform: scale(1.1) translate(0px, 10%);  
+}
+.l{
+    border-bottom: 2px solid   rgb(132,14,201);
+    padding: 6px;
+}
+/*Icon menu mobile*/
+.mobile-menu-icon{
+    display: none;
+}
+.div-menu-mobile{
+    display: none;
+}
